# pyhoro

./: README.md  pyproject.toml  requirements.txt
pyhoro/: __init__.py
pyhoro/api/: __init__.py  base.py  rambler.py
pyhoro/enums/: __init__.py  zodiac_title.py
pyhoro/types/: __init__.py  compatibility.py  horoscope.py  meta.py
pyhoro/utils/: __init__.py  get_zodiac_sign.py  zodiacs.py
