[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyhoro"
version = "0.0.1"
authors = [{ name = "Andrey Zin", email = "andrey@zin.pw" }]
description = "Async rambler horoscopes wrapper"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["hishel~=0.0.22", "httpx~=0.26.0", "pydantic > 2, < 2.6"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/andreyzin/pyhoro"
Issues = "https://github.com/andreyzin/pyhoro/issues"
